--- a/src/login/login-server.vcxproj
+++ b/src/login/login-server.vcxproj
@@ -98,7 +98,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;version.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -113,7 +113,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;version.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -132,7 +132,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ws2_32.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;version.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -151,7 +151,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ws2_32.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;version.lib;$(SolutionDir).vs\build\common.lib;$(SolutionDir)3rdparty\mysql\lib\$(Platform)\libmysql.lib;$(SolutionDir).vs\build\yaml-cpp.lib;$(SolutionDir)3rdparty\dbghelp\lib\$(Platform)\dbghelp.lib;$(SolutionDir)3rdparty\pcre\lib\$(Platform)\pcre8.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -162,6 +162,7 @@
     <ClInclude Include="loginclif.hpp" />
     <ClInclude Include="logincnslif.hpp" />
     <ClInclude Include="loginlog.hpp" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="account.cpp" />
@@ -171,6 +172,9 @@
     <ClCompile Include="loginclif.cpp" />
     <ClCompile Include="logincnslif.cpp" />
     <ClCompile Include="loginlog.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="login-server.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
