--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -67,6 +67,7 @@ set( COMMON_MINI_HEADERS
 	"${COMMON_SOURCE_DIR}/crashdump.hpp"
 	"${COMMON_SOURCE_DIR}/cryptopp.hpp"
 	${LIBCONFIG_HEADERS} # needed by showmsg.hpp
+	${BREAKPAD_HEADERS}
 	${COMMON_ADDITIONALL_HPP} # needed by Windows
 	CACHE INTERNAL "" )
 set( COMMON_MINI_SOURCES
@@ -79,9 +80,10 @@ set( COMMON_MINI_SOURCES
 	"${COMMON_SOURCE_DIR}/crashdump.cpp"
 	"${COMMON_SOURCE_DIR}/cryptopp.cpp"
 	${LIBCONFIG_SOURCES} # needed by showmsg.cpp
+	${BREAKPAD_SOURCES}
 	${COMMON_ADDITIONALL_CPP} # needed by Windows
 	CACHE INTERNAL "" )
-set( COMMON_MINI_INCLUDE_DIRS ${LIBCONFIG_INCLUDE_DIRS} CACHE INTERNAL "" )
+set( COMMON_MINI_INCLUDE_DIRS ${LIBCONFIG_INCLUDE_DIRS} ${BREAKPAD_INCLUDE_DIRS} CACHE INTERNAL "" )
 set( COMMON_MINI_DEFINITIONS "-DMINICORE ${LIBCONFIG_DEFINITIONS}" CACHE INTERNAL "" )
 
 
