--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -23,6 +23,7 @@
     <ClInclude Include="cbasetypes.hpp" />
     <ClInclude Include="cli.hpp" />
     <ClInclude Include="conf.hpp" />
+    <ClInclude Include="configparser.hpp" />
     <ClInclude Include="core.hpp" />
     <ClInclude Include="cryptopp.hpp" />
     <ClInclude Include="database.hpp" />
