--- a/src/common/common.vcxproj.filters
+++ b/src/common/common.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClInclude Include="processmutex.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="configparser.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cli.cpp">
