--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -1738,6 +1738,8 @@ Body:
   Translation: ""
 - Original: "Terminating...\n"
   Translation: "正在結束...\n"
+- Original: "The Map-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "地圖伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The No.%d parameter (%s) can not be found.\n"
   Translation: ""
 - Original: "The No.%d parameter (%s) is not integer type.\n"
@@ -1750,12 +1752,16 @@ Body:
   Translation: ""
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d).\n\n"
+- Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "角色伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %d, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The communication passwords are set in map_athena.conf and char_athena.conf\n"
   Translation: "內部通訊賬號密碼通常設定在 map_athena.conf 和 char_athena.conf 檔案中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 轉換後即將輸出的 \"%s\" 已經有檔案存在.\n[{CL_CYAN}][選擇][{CL_RESET}]: 你是否需要覆蓋它? 這是最後一次確認. (Y/N)\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u).\n\n"
+- Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
+  Translation: "登入伺服器已經[{CL_GREEN}]準備就緒[{CL_RESET}] (監聽埠為 %u, 總計耗時 %[{PRIu64}] 毫秒).\n\n"
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
   Translation: "伺服器之間的內部通訊賬號密碼 (預設是: s1/p1) 可能是無效的.\n"
 - Original: "This constant was deprecated and could become unavailable anytime soon.\n"
