--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,8 @@ image: Visual Studio 2015
 # This is the default location, but we put it here for safety reasons, since we use it in our test script
 clone_folder: c:\projects\pandas
 # We do not need the git history for our integration tests
-clone_depth: 1
+clone_depth: 10
+shallow_clone: true
 version: '{branch}-{build}'
 pull_requests:
   do_not_increment_build_number: true
